--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
 <div class="container">
-  <table mat-table [dataSource]="myData">
+  <a [routerLink]="'/image-to-pdf'">Image to pdf</a>
+  <table
+    mat-table
+    [dataSource]="myData"
+  >
     <ng-container matColumnDef="product">
       <th mat-header-cell *matHeaderCellDef [attr.rowspan]="2">Product Name</th>
-      <td mat-cell *matCellDef="let row">{{ row.data.name  }}</td>
+      <td mat-cell *matCellDef="let row">{{ row.data.name }}</td>
     </ng-container>
     <ng-container *ngFor="let col of allColumns">
       <ng-container [matColumnDef]="col.key">
@@ -28,3 +32,4 @@
     <tr mat-row *matRowDef="let row; columns: allComplexDataCols"></tr>
   </table>
 </div>
+<router-outlet></router-outlet>
