--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div class="container">
   <a [routerLink]="'/image-to-pdf'">Image to pdf</a>
+  <a [routerLink]="'/table-tree'" style="margin-left: 20px;">Tree in table</a>
   <table
     mat-table
     [dataSource]="myData"
+    *ngIf="false"
   >
     <ng-container matColumnDef="product">
       <th mat-header-cell *matHeaderCellDef [attr.rowspan]="2">Product Name</th>
