--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <a [routerLink]="'/image-to-pdf'">Image to pdf</a>
   <a [routerLink]="'/table-tree'" style="margin-left: 20px;">Tree in table</a>
+    <a [routerLink]="'/rxjs'" style="margin-left: 20px;">Rxjs</a>
   <table
     mat-table
     [dataSource]="myData"
