--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,9 @@
 <div class="container">
   <a [routerLink]="'/image-to-pdf'">Image to pdf</a>
-  <a [routerLink]="'/table-tree'" style="margin-left: 20px;">Tree in table</a>
-    <a [routerLink]="'/rxjs'" style="margin-left: 20px;">Rxjs</a>
-  <table
-    mat-table
-    [dataSource]="myData"
-    *ngIf="false"
-  >
+  <a [routerLink]="'/table-tree'" style="margin-left: 20px">Tree in table</a>
+  <a [routerLink]="'/rxjs'" style="margin-left: 20px">Rxjs</a>
+  <a [routerLink]="'/js'" style="margin-left: 20px">JS</a>
+  <table mat-table [dataSource]="myData" *ngIf="false">
     <ng-container matColumnDef="product">
       <th mat-header-cell *matHeaderCellDef [attr.rowspan]="2">Product Name</th>
       <td mat-cell *matCellDef="let row">{{ row.data.name }}</td>
