--- a/src/app/rxjs/rxjs.component.html
+++ b/src/app/rxjs/rxjs.component.html
@@ -5,3 +5,5 @@
 <p style="text-align: center;" *ngIf="false">{{ switchMapRes$ | async }}</p>
 <p style="text-align: center;" *ngIf="false">{{ mergeMap$ | async }}</p>
 <p style="text-align: center;" *ngIf="true">{{ exhaustMap$ | async }}</p>
+<p>{{obsValue$ | async}}</p>
+<button (click)="updateObsArray()">Click </button>
