email preview added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <a [routerLink]="'/table-tree'" style="margin-left: 20px">Tree in table</a>
   <a [routerLink]="'/rxjs'" style="margin-left: 20px">Rxjs</a>
   <a [routerLink]="'/js'" style="margin-left: 20px">JS</a>
+  <a [routerLink]="'/email-templates'" style="margin-left: 20px">Email Templates</a>
   <table mat-table [dataSource]="myData" *ngIf="false">
     <ng-container matColumnDef="product">
       <th mat-header-cell *matHeaderCellDef [attr.rowspan]="2">Product Name</th>
