--- a/src/app/email-templates/email-templates.component.html
+++ b/src/app/email-templates/email-templates.component.html
@@ -1,7 +1,16 @@
 <div class="email-templates">
-  <div
-  class="email-preview"
+<!--   <div
+    class="email-preview"
     *ngFor="let template of templatesArray"
     [innerHTML]="template | safeHtml"
-  ></div>
+    #templateRef
+  ></div> -->
+  <iframe
+    class="email-preview"
+    *ngFor="let template of templatesArray"
+    [srcdoc]="template | safeHtml"
+    frameborder="0"
+    height="550"
+    width="400"
+  ></iframe>
 </div>
