--- a/src/app/email-templates/email-templates.component.scss
+++ b/src/app/email-templates/email-templates.component.scss
@@ -1,16 +1,11 @@
 .email-templates {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  width: 100%;
   justify-content: space-around;
-  .email-preview {
+
+  app-email-template-preview {
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    margin: 20px 0;
-    box-sizing: border-box;
-    border: 1px solid;
-    border-radius: 4px;
+    justify-content: center;
+    align-items: center;
   }
 }
