--- a/src/app/rxjs/rxjs.component.html
+++ b/src/app/rxjs/rxjs.component.html
@@ -3,7 +3,7 @@
 
 <p style="text-align: center;" *ngIf="false">{{ concatMapRes$ | async }}</p>
 <p style="text-align: center;" *ngIf="false">{{ switchMapRes$ | async }}</p>
-<p style="text-align: center;" *ngIf="false">{{ mergeMap$ | async }}</p>
-<p style="text-align: center;" *ngIf="true">{{ exhaustMap$ | async }}</p>
+<p style="text-align: center;" *ngIf="true">{{ mergeMap$ | async }}</p>
+<p style="text-align: center;" *ngIf="false">{{ exhaustMap$ | async }}</p>
 <p>{{obsValue$ | async}}</p>
 <button (click)="updateObsArray()">Click </button>
